[package]
name = "rsas_report_convert"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
clap = { version = "4.5.18", features = ["derive"] }
rust_xlsxwriter = "0.92.2"
scraper = "0.25.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = "1.40.0"
zip = "7.0.0"
